--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -52,6 +52,14 @@ body {
   margin: 100px;
 }
 
+#vehicleCard1 {
+  margin: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .button {
   color:white;
 }
