--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -58,10 +58,54 @@ body {
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  border: 20px;
+  
 }
 
-.button {
+#bCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 400px;
+  min-width: 400px;
+  margin: 0 auto;
+  // background: #A0C5E8;
+  padding: 10px 0;
+  align-items: center;
+  border-color: black;
+}
+
+#vehicleButtons {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: center;
+  // width: 400px;
+  height: 50px;
+  margin: 0 5px;
+}
+#vehicle {
+  display: flex;
+  align-content: space-between;
+}
+
+#addVehicle {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#background {
+  background-image: url('http://wallpapersexpert.com/data/out/50/3726661-mechanic-wallpapers.jpg');
+  background-repeat:no-repeat;
+  background-size:contain;
+  height:200px;width:1200px;
+}
+
+button {
   color:white;
+  padding-bottom: 10px;
+  margin: 5px;
 }
 
 .file-upload-form, .image-preview {
